Open Account page done

--- a/MS3/index.html
+++ b/MS3/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
-  <title>Home</title>
+  <title>Crédit Égide Home</title>
 
   <!-- Bootstrap core CSS -->
   <link href="resources1/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
