--- a/MS3/login.html
+++ b/MS3/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+
 <html lang="en" dir="ltr">
 
 <head>
     <meta charset="utf-8">
-    <title>Multi Step Form | CodingNepal</title>
+    <title>Crédit Égide Login</title>
     <link rel="stylesheet" href="resources1/css/log.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
