--- a/MS3/viewCreditCards.html
+++ b/MS3/viewCreditCards.html
@@ -100,7 +100,7 @@
                                 <a href="viewCreditCardTransactions.html" class="btn custom-btn mt-3 mt-lg-4">View transactions</a>
                                 <a href="points.html" class="btn custom-btn mt-3 mt-lg-4">Redeem Points</a>
                                 <a href="topics-detail.html" class="btn custom-btn mt-3 mt-lg-4">Pay Credit Card Bill</a>
-                                <a href="topics-detail.html" class="btn custom-btn mt-3 mt-lg-4">Report Card Theft</a>
+                                <a href="cardTheft.html" class="btn custom-btn mt-3 mt-lg-4">Report Card Theft</a>
 
 
                             </div>
@@ -119,7 +119,7 @@
                                 <a href="viewCreditCardTransactions.html" class="btn custom-btn mt-3 mt-lg-4">View transactions</a>
                                 <a href="points.html" class="btn custom-btn mt-3 mt-lg-4">Redeem Points</a>
                                 <a href="topics-detail.html" class="btn custom-btn mt-3 mt-lg-4">Pay Credit Card Bill</a>
-                                <a href="topics-detail.html" class="btn custom-btn mt-3 mt-lg-4">Report Card Theft</a>
+                                <a href="cardTheft.html" class="btn custom-btn mt-3 mt-lg-4">Report Card Theft</a>
 
 
                             </div>
