--- a/MS3/creditcard.html
+++ b/MS3/creditcard.html
@@ -17,7 +17,7 @@
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="CreditCard&Loans/assets/css/fontawesome.css">
   <link rel="stylesheet" href="CreditCard&Loans/assets/css/creditcards.css">
-  <link rel="stylesheet" href="CreditCard&Loans/assets/css/owl.css">
+  <link rel="stylesheet" href="CreditCard&Loans/assets/css/owl2.css">
   <link rel="stylesheet" href="CreditCard&Loans/assets/css/animate.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
