close account page

--- a/MS3/AccountManager.html
+++ b/MS3/AccountManager.html
@@ -17,25 +17,14 @@
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="AccountManager/assets/css/fontawesome.css">
   <link rel="stylesheet" href="AccountManager/assets/css/creditcards.css">
-  <link rel="stylesheet" href="AccountManager/assets/css/owl.css">
+  
   <link rel="stylesheet" href="AccountManager\assets\css\viewCredit.css">
 
 
 </head>
 <body>
 
-    <!-- ***** Preloader Start ***** -->
-    <div id="js-preloader" class="js-preloader">
-      <div class="preloader-inner">
-        <span class="dot"></span>
-        <div class="dots">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
-    </div>
-     <!-- ***** Preloader End ***** -->
+  
 
      <style>
         body {
@@ -64,7 +53,7 @@ background-size: cover;
             <ul class="nav">
 
               <li><a href="loggedHome.html" class="active">Home</a></li>
-              <li><a href="#CloseAccount.html">Close An Account</a></li>
+              <li><a href="CloseAccount.html">Close An Account</a></li>
               <li><a href="openAccount.html">Open New Account</a></li>
               <li><a href="index.html" id="ignoreCSS">
                 <i class="fa fa-user" id=profile></i></a></li>
