updates in banker /account manager

--- a/MS3/Admin.html
+++ b/MS3/Admin.html
@@ -44,9 +44,9 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="Admin.html" class="active">Home</a></li>
-              <li><a href="SendAnnouncment.html">send announcement</a></li>
-              <li><a href="ViewTechIssue.html">View technical issue Reports</a></li>
-              <li><a href="BlockUser.html">Block User</a></li>
+              <li><a href="SendAnnouncment.html"class="active">send announcement</a></li>
+              <li><a href="ViewTechIssue.html"class="active">View technical issue Reports</a></li>
+              <li><a href="BlockUser.html"class="active">Block User</a></li>
               <li>
                
               </li>
