--- a/MS3/BlockUser.html
+++ b/MS3/BlockUser.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
-  <title>Creadit Cards</title>
+  <title>Block User</title>
 
   <!-- Bootstrap core CSS -->
   <link href="Admin/CreditCard&Loans/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -69,8 +69,8 @@ background-size: cover;
             <ul class="nav">
 
               <li><a href="Admin.html" class="active">Home</a></li>
-              <li><a href="SendAnnouncment.html"> Send Announcement</a></li>
-              <li><a href="ViewTechIssue.html">View Technical Issue Reports</a></li>
+              <li><a href="SendAnnouncment.html"class="active"> Send Announcement</a></li>
+              <li><a href="ViewTechIssue.html"class="active">View Technical Issue Reports</a></li>
               
               
               <li>
