--- a/MS3/ViewLoanREQ.html
+++ b/MS3/ViewLoanREQ.html
@@ -9,14 +9,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
-  <title>Home</title>
+  <title>Loan Requests</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="assets/css/fontawesome.css">
-  <link rel="stylesheet" href="assets/css/templatemo-woox-travel.css">
+  <link rel="stylesheet" href="banker/css/templatemo-woox-travel.css">
   <link rel="stylesheet" href="assets/css/owl.css">
   <link rel="stylesheet" href="assets/css/animate.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -43,8 +43,10 @@
             <ul class="nav">
               <li><a href="banker.html" class="active">Home</a></li>
       
-              <li><a href="ViewCreditCardREQ.html">View Credit Card Requests</a></li>
-              <li><a href="ViewAccountREQ.html">View Account Requests</a></li>
+              <li><a href="ViewCreditCardREQ.html"class="active">View Credit Card Requests</a></li>
+              <li><a href="ViewAccountREQ.html"class="active">View Account Requests</a></li>
+			  <li><a href="ViewCreditCardDisableREQ.html"class="active">View Credit card Disable Requests</a></li>
+
               <li>
                
               </li>
@@ -89,7 +91,7 @@
 				<div class="col-md-6 text-center mb-5">
 					<style>
 						body {
-							background: url('assets/images/banner-01.jpg') no-repeat center center;
+							background: url('banker/resources1/images/banner-01.jpg') no-repeat center center;
   background-size: cover;
 						}
 					  </style>
