--- a/MS3/banker.html
+++ b/MS3/banker.html
@@ -9,16 +9,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
-  <title>Home</title>
+  <title>Admin</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Additional CSS Files -->
-  <link rel="stylesheet" href="assets/css/fontawesome.css">
-  <link rel="stylesheet" href="banker/css/templatemo-woox-travel.css">
-  <link rel="stylesheet" href="assets/css/owl.css">
-  <link rel="stylesheet" href="assets/css/animate.css">
+  <link rel="stylesheet" href="banker/resources1/css/fontawesome.css">
+  <link rel="stylesheet" href="banker/resources1/css/templatemo-woox-travel.css">
+  <link rel="stylesheet" href="banker/resources1/css/owl.css">
+  <link rel="stylesheet" href="banker/resources1/css/animate.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
 
@@ -43,9 +43,10 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="banker.html" class="active">Home</a></li>
-              <li><a href="ViewLoanREQ.html">View Loan Requests</a></li>
-              <li><a href="ViewCreditCardREQ.html">View Credit Card Requests</a></li>
-              <li><a href="ViewAccountREQ.html">View Account Requests</a></li>
+              <li><a href="ViewLoanREQ.html"class="active">View Loan Requests</a></li>
+              <li><a href="ViewCreditCardREQ.html"class="active">View Credit Card Requests</a></li>
+              <li><a href="ViewAccountREQ.html"class="active">View Account Requests</a></li>
+              <li><a href="ViewCreditCardDisableREQ.html"class="active">View Credit card Disable Requests</a></li>
               <li>
                
               </li>
@@ -76,7 +77,7 @@
           <div class="banner-inner-wrapper header-text">
             <div class="main-caption">
               
-              <h1>France</h1>
+              <h1>Welcome Banker</h1>
             </div>
             <div class="container">
               <div class="row">
@@ -94,7 +95,7 @@
         <div id="top-banner-2" class="banner">
           <div class="banner-inner-wrapper header-text">
             <div class="main-caption">
-              <h1>Egypt</h1>
+              <h1>Welcome Banker</h1>
             </div>
             <div class="container">
               <div class="row">
@@ -112,7 +113,7 @@
         <div id="top-banner-3" class="banner">
           <div class="banner-inner-wrapper header-text">
             <div class="main-caption">
-              <h1>Switzerland</h1>
+              <h1>Welcome Banker</h1>
             </div>
             <div class="container">
               <div class="row">
@@ -131,7 +132,7 @@
           <div class="banner-inner-wrapper header-text">
             <div class="main-caption">
 
-              <h1>USA</h1>
+              <h1>Welcome Banker</h1>
 
             </div>
             <div class="container">
