--- a/MS3/AccountManager.html
+++ b/MS3/AccountManager.html
@@ -16,8 +16,9 @@
 
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="AccountManager/assets/css/fontawesome.css">
-  <link rel="stylesheet" href="AccountManager/assets/css/creditcards.css">
-  
+  <link rel="stylesheet" href="assets/css/templatemo-woox-travel.css">
+ 
+  <link rel="stylesheet" href="AccountManager/assets/css/owl.css">
   <link rel="stylesheet" href="AccountManager\assets\css\viewCredit.css">
 
 
@@ -82,6 +83,8 @@ background-size: cover;
         <div class="row">
 
             <div class="col-lg-12 col-12 text-center">
+              <th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
+              <th>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </th>
                 <h3 class="mb-4">My Accounts</h3>
             </div>
 
