New tranfers w Refactor Credit card.

--- a/MS3/internal.html
+++ b/MS3/internal.html
@@ -135,28 +135,36 @@
                   <input type="email" class="form-control" name="email" id="email"  placeholder="Your email">
                 </div>
               </div>-->
-              <label for="cars">Choose your Payment:</label>
+              <label for="cars">Choose your organization:</label>
 
-              <select name="Payments" id="Payments">
-                <option value="CC">CreditCards</option>
-                <option value="Bills">Bills</option>
-                <option value="Loan">Loans</option>
-                <option value="Transfer">Transfer</option>
+              <select name="Payments" id="oragnization">
+                <option value="Bills">Crédit Égide</option>
+                <option value="org">CIB</option>
+                <option value="CC">BM</option>
+                <option value="Bills">NBD</option>
+                <option value="Bills">CBC</option>
+                
                 
               </select>
+              <br>
+
+              <div class="col-md-6 form-group mb-3">
+                <label for="" class="col-form-label">Enter Account Number *</label>
+                <input type="text" class="form-control" name="accNo" id="accNo" placeholder="Account Number">
+              </div>
 
               <!--<label for="cars">By account:</label>
 
               <select name="acount" id="account">
                 <option value="volvo">1234 1234 1234 1234</option>
                 <option value="saab">5678 5678 5678 5678</option>
-              </select>
+              </select>-->
               <br><div class="col-md-6 form-group mb-3">
                 <label for="" class="col-form-label">Transfer Amount *</label>
                 <input type="number" class="form-control" name="amount" id="amount" placeholder="Enter Amount">
               </div>
               <br>
-              <br>-->
+              <br>
               <style>
                 body {
                   background: url('resources1/images/banner-01.jpg') no-repeat center center;
