--- a/MS3/AccountManager.html
+++ b/MS3/AccountManager.html
@@ -29,7 +29,7 @@
 
      <style>
         body {
-          background: url('AccountManager/Images/background.jpg') no-repeat center center;
+          background: url('AccountManager/resources1/images/banner-01.jpg') no-repeat center center;
 background-size: cover;
         }
         </style>
@@ -98,7 +98,7 @@ background-size: cover;
                                 <h7 class="mb-2">Available Balance : </h7><br>
 
                                 <a href="viewCreditCardTransactions.html" class="btn custom-btn mt-3 mt-lg-4">View transactions</a>
-                                <a href=".html" class="btn custom-btn mt-3 mt-lg-4">Transfer Money From Account</a>
+                                <a href="Tranfer.html" class="btn custom-btn mt-3 mt-lg-4">Transfer Money From Account</a>
                                 
 
 
@@ -115,7 +115,7 @@ background-size: cover;
                                 <h7 class="mb-2">Available Balance : </h7><br>
 
                                 <a href="viewCreditCardTransactions.html" class="btn custom-btn mt-3 mt-lg-4">View transactions</a>
-                                <a href=".html" class="btn custom-btn mt-3 mt-lg-4">Transfer Money From Account</a>
+                                <a href="Tranfer.html" class="btn custom-btn mt-3 mt-lg-4">Transfer Money From Account</a>
                                 
 
 
