--- a/MS3/CloseAccount.html
+++ b/MS3/CloseAccount.html
@@ -75,6 +75,7 @@
 
 	<section class="section-padding">
 	<!-- container -->
+	
 	<div class="container">
 				<div class="row">
 					<div class="col-md-6">
@@ -108,16 +109,17 @@
 								<textarea class="form-control" id="message" placeholder="Write you message here..." style="height:100px;"></textarea>
 							</div>
 							<button class=" popup glow-on-hover" onclick="myFunction()" type="button" >Submit request
-								<span class="popuptext" id="myPopup">Wait for a confirmation message</span></button><p><br/></p>
+								<span class="popuptext" id="myPopup">Request sent , wait for a confirmation message</span></button><p><br/></p>
 
 						</form>
 					</div>
 					<div class="col-md-6 hidden-sm close-account 
 					">
 		
-					</div>
+					
 				</div>
 			</div>
+		</div>
 	<!-- /container -->
 </section>
 
@@ -183,6 +185,8 @@
 		  popup.classList.toggle("show");
 		}
 		</script>
+
+
 
 </body>
 </html>
