--- a/MS3/login.html
+++ b/MS3/login.html
@@ -51,7 +51,7 @@
                         <div class="label">
                             Password
                         </div>
-                        <input type="text">
+                        <input type="password">
                     </div>
                     <div class="field">
                         <button class="firstNext next">Next</button>
