--- a/MS3/ViewTechIssue.html
+++ b/MS3/ViewTechIssue.html
@@ -70,7 +70,7 @@ background-size: cover;
 
               <li><a href="Admin.html" class="active">Home</a></li>
               <li><a href="SendAnnouncment.html"class="active"> Send Announcement</a></li>
-              <li><a href="ViewTechIssue.html"class="active">Block user</a></li>
+              <li><a href="BlockUser.html" class="active">Block user</a></li>
               
               
               <li>
