--- a/MS3/viewLoans.html
+++ b/MS3/viewLoans.html
@@ -101,7 +101,7 @@
 
 
                                 <a href="viewLoanPayments.html" class="btn custom-btn2 mt-3 mt-lg-4">View Loan Payments</a>
-                                <a href="topics-detail.html" class="btn custom-btn2 mt-3 mt-lg-4">Pay Loan Bill</a>
+                                <a href="loansPayment.html" class="btn custom-btn2 mt-3 mt-lg-4">Pay Loan Bill</a>
 
                             </div>
                         </div>
@@ -121,7 +121,7 @@
 
                                 <a href="viewLoanPayments.html" class="btn custom-btn2 mt-3 mt-lg-4">View Loan Payments</a>
                                 
-                                <a href="topics-detail.html" class="btn custom-btn2 mt-3 mt-lg-4">Pay Loan Bill</a>
+                                <a href="loansPayment.html" class="btn custom-btn2 mt-3 mt-lg-4">Pay Loan Bill</a>
 
                             </div>
                         </div>
