--- a/MS3/ReportsComp.html
+++ b/MS3/ReportsComp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html style="height:700px">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,127 +17,118 @@
   <link rel="stylesheet" href="assets/css/animate.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <link rel="stylesheet" href="resources1/images/banner-01.jpg" />
-  <style>
-    #ignoreCSS {
-      all: unset;
-    }
-  </style>
+
+  <link rel="stylesheet" type="text/css"
+  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+  body {
+    background: url('Reports/resources1/images/banner-01.jpg') no-repeat center center;
+    background-size: cover;
+  }
+</style>
 </head>
 
 <body>
 
- 
-<section style="height:700px;">
-  <!-- ***** Header Area Start ***** -->
-  <header class="header-area header-sticky">
-    <div class="container">
-      <div class="row">
-        <div class="col-12" style="padding: 0px 0px 0px 0px;">
-          <nav class="main-nav">
-            <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
-              <img src="assets/images/logo2.png" alt="" style="width: fit-content; height: fit-content;">
-              <img src="assets/images/name2.png" alt="" style="width: fit-content;  width: 150px; height: fit-content;">
-            </a>
-            <!-- ***** Logo End ***** -->
-            <!-- ***** Menu Start ***** -->
-            <ul class="nav">
 
-            
-              
-              <li><a href="index.html" id="ignoreCSS">
-                <i class="fa fa-envelope" id=profile></i></a></li>
-              <li>
-                <a href="index.html" id="ignoreCSS">
-                  <i class="fa fa-user" id=profile></i></a>
-              </li>
-              <li>
-                <div class="main-button">
-                  <a href="index.html" style="background-color: #eae6e6; color: #000000; 
+  <section style="height:700px;">
+    <!-- ***** Header Area Start ***** -->
+    <header class="header-area header-sticky">
+      <div class="container">
+        <div class="row">
+          <div class="col-12" style="padding: 0px 0px 0px 0px;">
+            <nav class="main-nav">
+              <!-- ***** Logo Start ***** -->
+              <a href="index.html" class="logo">
+                <img src="assets/images/logo2.png" alt="" style="width: fit-content; height: fit-content;">
+                <img src="assets/images/name2.png" alt=""
+                  style="width: fit-content;  width: 150px; height: fit-content;">
+              </a>
+              <!-- ***** Logo End ***** -->
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+
+
+
+                <li><a href="index.html" id="ignoreCSS">
+                    <i class="fa fa-envelope" id=profile></i></a></li>
+                <li>
+                  <a href="index.html" id="ignoreCSS">
+                    <i class="fa fa-user" id=profile></i></a>
+                </li>
+                <li>
+                  <div class="main-button">
+                    <a href="index.html" style="background-color: #eae6e6; color: #000000; 
                 text-align: center; padding: 10px 20px;">Log Out &#8680</a>
-                </div>
-              </li>
-            </ul>
-            <a class='menu-trigger'>
-              <span>Menu</span>
-            </a>
-            <!-- ***** Menu End ***** -->
-          </nav>
+                  </div>
+                </li>
+              </ul>
+              <a class='menu-trigger'>
+                <span>Menu</span>
+              </a>
+              <!-- ***** Menu End ***** -->
+            </nav>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
-  <!-- ***** Header Area End ***** -->
-  
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<style>
-  
-                body {
-                  background: url('Reports/resources1/images/banner-01.jpg') no-repeat center center;
-      background-size: cover;
-                }
-                </style>
+    </header>
+    <!-- ***** Header Area End ***** -->
+      <table border="0" width="50%" style="margin:auto;padding:30px;">
+        <tr>
+          <td>
+            <table border="0" cellpadding="0" cellspacing="0"
+              style="text-align:center;width:100%;background-color: #fff;">
+              <tr>
+                <td style="background-color:#274472;height:100px;font-size:50px;color:#fff;"><i class="fa fa-envelope-o"
+                    aria-hidden="true"></i></td>
+              </tr>
+              <tr>
+                <td><strong>Your report has been submitted</strong>
 
-<body>
-<table border="0" width="50%" style="margin:auto;padding:30px;">
-<tr>
-<td>
-<table border="0" width="100%">
-<tr>
-<td>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <p style="padding:0px 100px;">
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <button onclick="history.back()"
+                    style="margin:10px 0px 30px 0px;border-radius:4px;padding:10px 20px;border: 0;color:#fff;background-color:#274472; ">Go
+                    back To home page</button>
+                </td>
+              </tr>
+            </td>
+          </tr>
+        </table>
+        <tr>
+          <td>
+            <table border="0" width="100%" style="border-radius: 5px;text-align: center;">
+              <tr>
+                <td>
+                  <h3 style="margin-top:10px;">Stay in touch</h3>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div style="margin-top:20px;">
+                    <a href="#" style="text-decoration: none;"><span class="twit"
+                        style="background-color:#4099FF;color:#fff;border-radius:50%;"><i
+                          class="fa fa-twitter" aria-hidden="true" style="height:40px;width:30px;"></i></span></a>
+                    <a href="#" style="text-decoration: none;"><span class="fb"
+                        style="background-color: #3B5998;color:#fff;border-radius:50%;"><i
+                          class="fa fa-facebook" aria-hidden="true" style="height:40px;width:30px;"></i></span></a>
+                    <a href="#" style="text-decoration: none;"><span class="msg"
+                        style="background-color: #FFC400;color:#fff;border-radius:50%;"><i class=" fa
+                        fa-envelope-o" aria-hidden="true" style="height:40px;width:30px;"></i></span></a>
+                  </div>
+                </td>
+              </tr>
+              </table>
 
-</td>
-<td>
+            </section>
+    </body>
 
-</td>
-</tr>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table border="0" cellpadding="0" cellspacing="0" style="text-align:center;width:100%;background-color: #fff;">
-<tr>
-<td style="background-color:#274472;height:100px;font-size:50px;color:#fff;"><i class="fa fa-envelope-o" aria-hidden="true"></i></td>
-</tr>
-<tr>
-<td><strong>Your report has been submitted</strong>
-
-</td>
-</tr>
-<tr>
-<td>
-<p style="padding:0px 100px;">
-</p>
-</td>
-</tr>
-<tr>
-<td>
-<button  onclick="window.location.href='index.html'"style="margin:10px 0px 30px 0px;border-radius:4px;padding:10px 20px;border: 0;color:#fff;background-color:#274472; ">Go back To home page</button>
-</td>
-</tr>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table border="0" width="100%" style="border-radius: 5px;text-align: center;">
-<tr>
-<td>
-<h3 style="margin-top:10px;">Stay in touch</h3>
-</td>
-</tr>
-<tr>
-<td>
-<div style="margin-top:20px;">
-<a href="#" style="text-decoration: none;"><span class="twit" style="padding:10px 9px;background-color:#4099FF;color:#fff;border-radius:50%;"><i class="fa fa-twitter" aria-hidden="true" style="height:20px;width:20px;"></i></span></a>
-<a href="#" style="text-decoration: none;"><span class="fb" style="padding:10px 9px;background-color: #3B5998;color:#fff;border-radius:50%;"><i class="fa fa-facebook" aria-hidden="true" style="height:20px;width:20px;"></i></span></a>
-<a href="#" style="text-decoration: none;"><span class="msg" style="padding:10px 9px;background-color: #FFC400;color:#fff;border-radius:50%;""><i class="fa fa-envelope-o" aria-hidden="true" style="height:20px;width:20px;"></i></span></a>
-</div>
-</td>
-</tr>
-
-</body>
-</section>
 </html>
