--- a/MS3/login.html
+++ b/MS3/login.html
@@ -45,7 +45,7 @@
                         <div class="label">
                             Username
                         </div>
-                        <input type="text">
+                        <input id ="username" type="text">
                     </div>
                     <div class="field">
                         <div class="label">
