--- a/MS3/ViewCreditCardDisableREQ.html
+++ b/MS3/ViewCreditCardDisableREQ.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="Admin/CreditCard&Loans\assets\css\viewCredit.css">
 
 
+
 </head>
 <body>
 
@@ -69,9 +70,10 @@ background-size: cover;
             <ul class="nav">
 
               <li><a href="banker.html" class="active">Home</a></li>
-              <li><a href="ViewLoanREQ.html"class="active">View Loan Requests</a></li>
-              <li><a href="ViewCreditCardREQ.html"class="active">View Credit Card Requests</a></li>
-			  <li><a href="ViewAccountREQ.html"class="active">View Account Requests</a></li>
+              <li><a href="ViewLoanREQ.html"class="active"> Loan Requests</a></li>
+              <li><a href="ViewCreditCardREQ.html"class="active"> Credit Card Requests</a></li>
+			  <li><a href="ViewAccountREQ.html"class="active"> New Account Requests</a></li>
+        <li><a href="CloseAccBank.html"class="active"> Close Account Requests</a></li>
               
               
               <li>
