--- a/MS3/banker.html
+++ b/MS3/banker.html
@@ -42,11 +42,12 @@
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li><a href="banker.html" class="active">Home</a></li>
-              <li><a href="ViewLoanREQ.html"class="active">View Loan Requests</a></li>
-              <li><a href="ViewCreditCardREQ.html"class="active">View Credit Card Requests</a></li>
-              <li><a href="ViewAccountREQ.html"class="active">View Account Requests</a></li>
-              <li><a href="ViewCreditCardDisableREQ.html"class="active">View Credit card Disable Requests</a></li>
+              <!-- <li><a href="banker.html" class="active">Home</a></li> -->
+              <li><a href="ViewLoanREQ.html"class="active"> Loan Requests</a></li>
+              <li><a href="ViewCreditCardREQ.html"class="active"> Credit Card Requests</a></li>
+              <li><a href="ViewAccountREQ.html"class="active"> New Account Requests</a></li>
+              <li><a href="ViewCreditCardDisableREQ.html"class="active"> Credit card Disable Requests</a></li>
+              <li><a href="CloseAccBank.html"class="active"> Close Account Requests</a></li>
               <li>
                
               </li>
