--- a/MS3/cardTheft.html
+++ b/MS3/cardTheft.html
@@ -50,45 +50,45 @@
   
    
   
-    <!-- ***** Header Area Start ***** -->
-    <header class="header-area header-sticky">
-      <div class="container">
-        <div class="row">
-          <div class="col-12" style="padding: 0px 0px 0px 0px;">
-            <nav class="main-nav">
-              <!-- ***** Logo Start ***** -->
-              <a href="index.html" class="logo">
-                <img src="assets/images/logo2.png" alt="" style="width: fit-content; height: fit-content;">
-                <img src="assets/images/name2.png" alt="" style="width: fit-content;  width: 150px; height: fit-content;">
-              </a>
-              <!-- ***** Logo End ***** -->
-              <!-- ***** Menu Start ***** -->
-              <ul class="nav">
-  
-                <li><a href="index.html" class="active">Home</a></li>
-                
-                <li><a href="index.html" id="ignoreCSS">
-                  <i class="fa fa-envelope" id=profile></i></a></li>
-                <li>
-                  <a href="index.html" id="ignoreCSS">
-                    <i class="fa fa-user" id=profile></i></a>
-                </li>
-                <li>
-                  <div class="main-button">
-                    <a href="index.html" style="background-color: #eae6e6; color: #000000; 
-                  text-align: center; padding: 10px 20px;">Log Out &#8680</a>
-                  </div>
-                </li>
-              </ul>
-              <a class='menu-trigger'>
-                <span>Menu</span>
-              </a>
-              <!-- ***** Menu End ***** -->
-            </nav>
-          </div>
+
+  <!-- ***** Header Area Start ***** -->
+  <header class="header-area header-sticky">
+    <div class="container">
+      <div class="row">
+        <div class="col-12" style="padding: 0px 0px 0px 0px;">
+          <nav class="main-nav">
+            <!-- ***** Logo Start ***** -->
+            <a href="#" class="logo">
+              <img src="resources1/images/logo2.png" alt="" style="width: fit-content; height: fit-content;">
+              <img src="resources1/images/name2.png" alt="" style="width: fit-content;  width: 150px; height: fit-content;">
+            </a>
+            <!-- ***** Logo End ***** -->
+            <!-- ***** Menu Start ***** -->
+            <ul class="nav">
+
+              <li><a href="loggedHome.html" class="active" style="font-size: 20px; " >Home</a></li>
+              <!-- <li><a href="#announcements">Announcements</a></li> -->
+            
+              <li>
+                <a href="accountManager.html" id="ignorePadding">
+                  <i class="fa fa-user" id=profile></i></a>
+              </li>
+              <li>
+                <div class="main-button">
+                  <a href="index.html" style="background-color: #eae6e6; color: #000000; 
+                text-align: center; padding: 10px 20px;">Log Out &#8680</a>
+                </div>
+              </li>
+            </ul>
+            <a class='menu-trigger'>
+              <span>Menu</span>
+            </a>
+            <!-- ***** Menu End ***** -->
+          </nav>
         </div>
       </div>
-    </header>
+    </div>
+  </header>
     <!-- ***** Header Area End ***** -->
 
 
