--- a/MS3/points.html
+++ b/MS3/points.html
@@ -42,26 +42,27 @@
      <!-- ***** Preloader End ***** -->
 
   <!-- ***** Header Area Start ***** -->
+  
+  <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
     <div class="container">
       <div class="row">
         <div class="col-12" style="padding: 0px 0px 0px 0px;">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
-              <img src="CreditCard&Loans/assets/images/logo2.png" alt="" style="width: fit-content; height: fit-content;">
-              <img src="CreditCard&Loans/assets/images/name2.png" alt="" style="width: fit-content;  width: 150px; height: fit-content;">
+            <a href="#" class="logo">
+              <img src="resources1/images/logo2.png" alt="" style="width: fit-content; height: fit-content;">
+              <img src="resources1/images/name2.png" alt="" style="width: fit-content;  width: 150px; height: fit-content;">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
 
-              <li><a href="loggedHome.html" class="active">Home</a></li>
-              <li><a href="#announcements">Announcements</a></li>
-              <li><a href="index.html" id="ignoreCSS">
-                <i class="fa fa-envelope" id=profile></i></a></li>
+              <li><a href="loggedHome.html" class="active" style="font-size: 20px; " >Home</a></li>
+              <!-- <li><a href="#announcements">Announcements</a></li> -->
+            
               <li>
-                <a href="index.html" id="ignoreCSS">
+                <a href="accountManager.html" id="ignorePadding">
                   <i class="fa fa-user" id=profile></i></a>
               </li>
               <li>
@@ -74,11 +75,12 @@
             <a class='menu-trigger'>
               <span>Menu</span>
             </a>
-        </nav>
+            <!-- ***** Menu End ***** -->
+          </nav>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-</header>
+  </header>
 
 
 <section class="section-padding">
