--- a/MS3/ViewCreditCardREQ.html
+++ b/MS3/ViewCreditCardREQ.html
@@ -53,10 +53,11 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="banker.html" class="active">Home</a></li>
-              <li><a href="ViewLoanREQ.html"class="active">View Loan Requests</a></li>
+              <li><a href="ViewLoanREQ.html"class="active"> Loan Requests</a></li>
              
-              <li><a href="ViewAccountREQ.html"class="active">View Account Requests</a></li>
-			  <li><a href="ViewCreditCardDisableREQ.html"class="active">View Credit card Disable Requests</a></li>
+              <li><a href="ViewAccountREQ.html"class="active"> New Account Requests</a></li>
+			  <li><a href="ViewCreditCardDisableREQ.html"class="active"> Credit card Disable Requests</a></li>
+			  <li><a href="CloseAccBank.html"class="active"> Close Account Requests</a></li>
 
               <li>
                
