--- a/MS3/viewCreditCards.html
+++ b/MS3/viewCreditCards.html
@@ -37,6 +37,7 @@
     </div>
      <!-- ***** Preloader End ***** -->
 
+ 
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
     <div class="container">
@@ -44,20 +45,19 @@
         <div class="col-12" style="padding: 0px 0px 0px 0px;">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
-              <img src="CreditCard&Loans/assets/images/logo2.png" alt="" style="width: fit-content; height: fit-content;">
-              <img src="CreditCard&Loans/assets/images/name2.png" alt="" style="width: fit-content;  width: 150px; height: fit-content;">
+            <a href="#" class="logo">
+              <img src="resources1/images/logo2.png" alt="" style="width: fit-content; height: fit-content;">
+              <img src="resources1/images/name2.png" alt="" style="width: fit-content;  width: 150px; height: fit-content;">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
 
-              <li><a href="loggedHome.html" class="active">Home</a></li>
-              <li><a href="#announcements">Announcements</a></li>
-              <li><a href="index.html" id="ignoreCSS">
-                <i class="fa fa-envelope" id=profile></i></a></li>
+              <li><a href="loggedHome.html" class="active" style="font-size: 20px; " >Home</a></li>
+              <!-- <li><a href="#announcements">Announcements</a></li> -->
+            
               <li>
-                <a href="index.html" id="ignoreCSS">
+                <a href="accountManager.html" id="ignorePadding">
                   <i class="fa fa-user" id=profile></i></a>
               </li>
               <li>
@@ -76,8 +76,6 @@
       </div>
     </div>
   </header>
-
-
 
   <section class="section-padding">
     <div class="container">
