--- a/MS3/Reminders.html
+++ b/MS3/Reminders.html
@@ -106,7 +106,7 @@ https://templatemo.com/tm-580-woox-travel
               <div class="col-lg-6">
                 <fieldset>
                   <label for="Name" class="form-label">Typical Due Date</label>
-                  <input type="date" name="Name" class="Name" autocomplete="on" required>
+                  <input type="datetime-local" name="Name" class="Name" autocomplete="on" required>
                 </fieldset>
               </div>
  
@@ -122,6 +122,7 @@ https://templatemo.com/tm-580-woox-travel
                   </select>
                 </fieldset>
               </div>
+
               
               <div class="col-lg-12">
                 <fieldset>
