--- a/MS3/index.html
+++ b/MS3/index.html
@@ -20,7 +20,11 @@
   <link rel="stylesheet" href="resources1/css/owl.css">
   <link rel="stylesheet" href="resources1/css/animate.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-
+<style>
+      html,body, #announcements {
+      background-color: #373737;
+    }
+</style>
 </head>
 
 <body>
