--- a/MS3/Admin.html
+++ b/MS3/Admin.html
@@ -13,7 +13,7 @@
   <title>Home</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="admin/Resources1/css/fontawesome.css">
@@ -44,14 +44,14 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="Admin.html" class="active">Home</a></li>
-              <li><a href="SendAnnouncment.html"class="active">send announcement</a></li>
-              <li><a href="ViewTechIssue.html"class="active">View technical issue Reports</a></li>
-              <li><a href="BlockUser.html"class="active">Block User</a></li>
-              <li>
-               
-              </li>
-              <li>
-                
+              <li><a href="SendAnnouncment.html">send announcement</a></li>
+              <li><a href="ViewTechIssue.html">View technical issue Reports</a></li>
+              <li><a href="BlockUser.html">Block User</a></li>
+              <li> 
+                <div class="main-button">
+                  <a href="index.html" style="background-color: #eae6e6; color: #000000; 
+                text-align: center; padding: 10px 20px;">Log Out &#8680</a>
+                </div>
               </li>
             </ul>
             <a class='menu-trigger'>
@@ -164,7 +164,17 @@
     </div>
   </section>
   <!-- ***** Main Banner Area End ***** -->
-
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <p>Copyright © 2023 <a href="#">Crédit Égide</a> Bank. All rights reserved. <br>
+            <a href="#contactUs">Contact US</a>
+          </P>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="admin/resources1/vendor/jquery/jquery.min.js"></script>
   <script src="admin/resources1/vendor/bootstrap/js/bootstrap.min.js"></script>
 
