--- a/MS3/AnnouncementComp.html
+++ b/MS3/AnnouncementComp.html
@@ -7,7 +7,7 @@
     rel="stylesheet">
   <title>Announcement Posted</title>
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="resources1/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="assets/css/fontawesome.css">
@@ -41,21 +41,20 @@
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-
-            
-              
-              <li><a href="index.html" id="ignoreCSS">
-                <i class="fa fa-envelope" id=profile></i></a></li>
-              <li>
-                <a href="index.html" id="ignoreCSS">
-                  <i class="fa fa-user" id=profile></i></a>
-              </li>
-              <li>
-                <div class="main-button">
-                  <a href="index.html" style="background-color: #eae6e6; color: #000000; 
+            </li>
+            <li><a onclick="history.back()" id="ignorePadding">
+                <i class="fa fa-arrow-circle-left" id=profile style="color: aliceblue;"></i></a>
+            <li> 
+              <div class="main-button">
+                <a href="index.html" style="background-color: #eae6e6; color: #000000; 
                 text-align: center; padding: 10px 20px;">Log Out &#8680</a>
                 </div>
               </li>
+              <!-- <li><a href="index.html" id="ignorePadding">
+                  <i class="fa fa-bell" id=profile></i></a></li> -->
+              <!-- <li><a href="index.html" id="ignorePadding">
+                  <i class="fa fa-user" id=profile></i></a>
+              </li> -->
             </ul>
             <a class='menu-trigger'>
               <span>Menu</span>
@@ -71,15 +70,16 @@
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style>
-  
-                body {
-                  background: url('Reports/resources1/images/banner-01.jpg') no-repeat center center;
-      background-size: cover;
-                }
+  #ignoreCSS {
+         all: unset;
+       }
+  html,body, .content {
+      background-color: #373737;
+    }
                 </style>
 
 <body>
-<table border="0" width="50%" style="margin:auto;padding:30px;">
+<table border="0" width="50%" style="margin:100px auto auto auto;;padding:30px;">
 <tr>
 <td>
 <table border="0" width="100%">
@@ -136,7 +136,6 @@
 </div>
 </td>
 </tr>
-
-</body>
 </section>
+</body>
 </html>
