--- a/MS3/applyCreditCard.html
+++ b/MS3/applyCreditCard.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
-  <title>Crédit Égide Apply Credit-Card</title>
+  <title>Apply Credit-Card</title>
 
   <!-- Bootstrap core CSS -->
   <link href="resources1/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,8 +58,19 @@ https://templatemo.com/tm-580-woox-travel
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li><a onclick="history.back()" id="ignorePadding">
-                  <i class="fa fa-home" id=profile></i></a>
+            </li>
+            <li><a href="loggedHome.html">Home</a></li>
+                        <li><a href="applyCreditCard.html" class="active">Apply Credit-Card</a></li>
+            <!-- <li><a oncli id="ignoreCSS">
+              <i class="fa fa-arrow-alt-circle-left" id=profile></i></a></li>
+            -->
+            <li><a onclick="history.back()" id="ignorePadding">
+                <i class="fa fa-arrow-circle-left" id=profile style="color: aliceblue;"></i></a></li>
+            <li> 
+              <div class="main-button">
+                <a href="index.html" style="background-color: #eae6e6; color: #000000; 
+                text-align: center; padding: 10px 20px;">Log Out &#8680</a>
+                </div>
               </li>
               <!-- <li><a href="index.html" id="ignorePadding">
                   <i class="fa fa-bell" id=profile></i></a></li> -->
