--- a/MS3/banker.html
+++ b/MS3/banker.html
@@ -12,7 +12,7 @@
   <title>Admin</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="resources1/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="banker/resources1/css/fontawesome.css">
@@ -43,17 +43,17 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <!-- <li><a href="banker.html" class="active">Home</a></li> -->
-              <li><a href="ViewLoanREQ.html"class="active"> Loan Requests</a></li>
-              <li><a href="ViewCreditCardREQ.html"class="active"> Credit Card Requests</a></li>
-              <li><a href="ViewAccountREQ.html"class="active"> New Account Requests</a></li>
-              <li><a href="ViewCreditCardDisableREQ.html"class="active"> Credit card Disable Requests</a></li>
-              <li><a href="CloseAccBank.html"class="active"> Close Account Requests</a></li>
+              <li><a href="banker.html" class="active">Home</a></li>
+              <li><a href="ViewLoanREQ.html"> Loan Requests</a></li>
+              <li><a href="ViewCreditCardREQ.html"> Credit Card Requests</a></li>
+              <li><a href="ViewAccountREQ.html"> New Account Requests</a></li>
+              <li><a href="ViewCreditCardDisableREQ.html"> Credit card Disable Requests</a></li>
+              <li><a href="CloseAccBank.html"> Close Account Requests</a></li>
               <li>
-               
-              </li>
-              <li>
-                
-              </li>
+              <div class="main-button">
+                <a href="index.html" style="background-color: #eae6e6; color: #000000; 
+              text-align: center; padding: 10px 20px;">Log Out &#8680</a>
+              </div></li>
             </ul>
             <a class='menu-trigger'>
               <span>Menu</span>
@@ -165,7 +165,17 @@
     </div>
   </section>
   <!-- ***** Main Banner Area End ***** -->
-
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <p>Copyright © 2023 <a href="#">Crédit Égide</a> Bank. All rights reserved. <br>
+            <a href="#contactUs">Contact US</a>
+          </P>
+        </div>
+      </div>
+    </div>
+  </footer>
    <script src="banker/resources1/vendor/jquery/jquery.min.js"></script>
   <script src="banker/resources1/vendor/bootstrap/js/bootstrap.min.js"></script>
 
