references in index page and guest pages adjusted

--- a/MS3/creditCardguest.html
+++ b/MS3/creditCardguest.html
@@ -50,9 +50,12 @@
                 <!-- ***** Logo End ***** -->
                 <!-- ***** Menu Start ***** -->
                 <ul class="nav">
-                  <li><a href="#section-1" class="active">Home</a></li>
+                  <li><a href="#section-1">Credit-Cards</a></li>
                   <li><a href="#announcements">Announcements</a></li>
                   <li><a href="#openAccount">Open Account</a></li>
+                  <li><a onclick="history.back()" style="padding: 0%;">
+                    <i class="fa fa-arrow-circle-left" id=profile style="color: aliceblue;"></i></a>
+                    </li>
                   <li>
                     <div class="main-button">
                       <a href="register.html" style="background-color: #e6e7ea; color: #000000; 
@@ -84,11 +87,11 @@
       <input type="radio" id="banner4" class="sec-1-input" name="banner">
       <div class="slider">
         <div id="top-banner-1" class="banner">
-            <div class="viewCredit">
+            <!-- <div class="viewCredit">
                 <div class="border-button">
                     <a href="viewCreditCards.html">View My Credit Cards</a>
                   </div>
-               </div>
+               </div> -->
           <div class="banner-inner-wrapper header-text">
             <div class="main-caption">
               <h2>Platinum Credit Card</h2>
@@ -103,9 +106,9 @@
                 <div class="col-lg-12">
                   <div class="more-info">
                     <div class="row">
-                      <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="applyCreditCard.html">Apply for a Credit Card</a>
-                      </div>
+                      <!-- <div class="col-lg-3 col-sm-6 col-6">
+                        <a id="services" href="openAccount.html">Apply for a Credit Card</a>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -114,11 +117,11 @@
           </div>
         </div>
         <div id="top-banner-2" class="banner">
-            <div class="viewCredit">
+            <!-- <div class="viewCredit">
                 <div class="border-button">
                     <a href="viewCreditCards.html">View My Credit Cards</a>
                   </div>
-               </div>
+               </div> -->
           <div class="banner-inner-wrapper header-text">
             <div class="main-caption">
                 <h2>Titanium Credit Card</h2>
@@ -132,9 +135,9 @@
                 <div class="col-lg-12">
                   <div class="more-info">
                     <div class="row">
-                      <div class="col-lg-3 col-sm-6 col-6">
+                      <!-- <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="applyCreditCard.html">Apply for a Credit Card</a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -143,11 +146,11 @@
           </div>
         </div>
         <div id="top-banner-3" class="banner">
-            <div class="viewCredit">
+            <!-- <div class="viewCredit">
                 <div class="border-button">
                     <a href="viewCreditCards.html">View My Credit Cards</a>
                   </div>
-               </div>
+               </div> -->
           <div class="banner-inner-wrapper header-text">
             <div class="main-caption">
                 <h2>Gold Credit Card</h2>
@@ -161,9 +164,9 @@
                 <div class="col-lg-12">
                   <div class="more-info">
                     <div class="row">
-                      <div class="col-lg-3 col-sm-6 col-6">
+                      <!-- <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="applyCreditCard.html">Apply for a Credit Card</a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -172,16 +175,16 @@
           </div>
         </div>
         <div id="top-banner-4" class="banner">
-            <div class="viewCredit">
+            <!-- <div class="viewCredit">
                 <div class="border-button">
                     <a href="viewCreditCards.html">View My Credit Cards</a>
                   </div>
-               </div>
-           <div class="viewCredit">
+               </div> -->
+           <!-- <div class="viewCredit">
             <div class="border-button">
                 <a href="viewCreditCards.html">View My Credit Cards</a>
               </div>
-           </div>
+           </div> -->
           <div class="banner-inner-wrapper header-text">
             
             <div class="main-caption">
@@ -196,9 +199,9 @@
                 <div class="col-lg-12">
                   <div class="more-info">
                     <div class="row">
-                      <div class="col-lg-3 col-sm-6 col-6">
+                      <!-- <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="applyCreditCard.html">Apply for a Credit Card</a>
-                      </div>
+                      </div> -->
                       
                     </div>
                   </div>
