--- a/MS3/index.html
+++ b/MS3/index.html
@@ -109,10 +109,10 @@
                         <a id="services" href="transactions.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="creditCard.html">Credit Cards</a>
+                        <a id="services" href="creditCardguest.html">Credit Cards</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="loans.html">Loans</a>
+                        <a id="services" href="loanGuest.html">Loans</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="report.html">Reports!</a>
@@ -138,10 +138,10 @@
                         <a id="services" href="transactions.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="creditCard.html">Credit Cards</a>
+                        <a id="services" href="creditCardguest.html">Credit Cards</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="loans.html">Loans</a>
+                        <a id="services" href="loanGuest.html">Loans</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="report.html">Reports!</a>
@@ -167,10 +167,10 @@
                         <a id="services" href="transactions.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="creditCard.html">Credit Cards</a>
+                        <a id="services" href="creditCardguest.html">Credit Cards</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="loans.html">Loans</a>
+                        <a id="services" href="loanGuest.html">Loans</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="report.html">Reports!</a>
@@ -197,10 +197,10 @@
                         <a id="services" href="transactions.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="creditCard.html">Credit Cards</a>
+                        <a id="services" href="creditCardguest.html">Credit Cards</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="loans.html">Loans</a>
+                        <a id="services" href="loanGuest.html">Loans</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="report.html">Reports!</a>
@@ -226,10 +226,10 @@
                         <a id="services" href="transactions.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="creditCard.html">Credit Cards</a>
+                        <a id="services" href="creditCardguest.html">Credit Cards</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="loans.html">Loans</a>
+                        <a id="services" href="loanGuest.html">Loans</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="report.html">Reports!</a>
@@ -255,10 +255,10 @@
                         <a id="services" href="transactions.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="creditCard.html">Credit Cards</a>
+                        <a id="services" href="creditCardguest.html">Credit Cards</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="loans.html">Loans</a>
+                        <a id="services" href="loanGuest.html">Loans</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="report.html">Reports!</a>
@@ -284,10 +284,10 @@
                         <a id="services" href="transactions.html">Transactions</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="creditCard.html">Credit Cards</a>
+                        <a id="services" href="creditCardguest.html">Credit Cards</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
-                        <a id="services" href="loans.html">Loans</a>
+                        <a id="services" href="loanGuest.html">Loans</a>
                       </div>
                       <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="report.html">Reports!</a>
