--- a/MS3/loanGuest.html
+++ b/MS3/loanGuest.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="CreditCard&Loans/assets/css/owl.css">
   <link rel="stylesheet" href="CreditCard&Loans/assets/css/animate.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+  <!-- <link rel="stylesheet" href="CreditCard&Loans/assets/css/templatemo-woox-travel.css" /> -->
+
 
 </head>
 <body>
@@ -50,9 +52,12 @@
                 <!-- ***** Logo End ***** -->
                 <!-- ***** Menu Start ***** -->
                 <ul class="nav">
-                  <li><a href="#section-1" class="active">Home</a></li>
+                  <li><a href="#section-1" class="active">Loans</a></li>
                   <li><a href="#announcements">Announcements</a></li>
                   <li><a href="#openAccount">Open Account</a></li>
+                  <li><a onclick="history.back()" style="padding: 0%;">
+                    <i class="fa fa-arrow-circle-left" id=profile style="color: aliceblue;"></i></a>
+                    </li>
                   <li>
                     <div class="main-button">
                       <a href="register.html" style="background-color: #e6e7ea; color: #000000; 
@@ -87,11 +92,11 @@
       <input type="radio" id="banner2" class="sec-1-input" name="banner">
       <div class="slider">
         <div id="top-banner-1" class="banner">
-            <div class="viewLoan">
+            <!-- <div class="viewLoan">
                 <div class="loans-button">
                     <a  id="services" href="viewLoans.html">View My Loans</a>
                   </div>
-               </div>
+               </div> -->
           <div class="banner-inner-wrapper header-text">
             <div class="main-caption">
                 <div class="space"></div>
@@ -106,9 +111,9 @@
                 <div class="col-lg-12">
                   <div class="more-info">
                     <div class="row">
-                      <div class="col-lg-3 col-sm-6 col-6">
+                      <!-- <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="applyLoan.html">Apply for a Loan</a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -117,11 +122,11 @@
           </div>
         </div>
         <div id="top-banner-2" class="banner">
-            <div class="viewLoan">
+            <!-- <div class="viewLoan">
                 <div class="loans-button">
                     <a  id="services" href="viewLoans.html">View My Loans</a>
                   </div>
-               </div>
+               </div> -->
           <div class="banner-inner-wrapper header-text">
             <div class="main-caption">
                 <div class="space"></div>
@@ -137,9 +142,9 @@
                 <div class="col-lg-12">
                   <div class="more-info">
                     <div class="row">
-                      <div class="col-lg-3 col-sm-6 col-6">
+                      <!-- <div class="col-lg-3 col-sm-6 col-6">
                         <a id="services" href="applyLoan.html">Apply for a Loan</a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -364,9 +369,7 @@
     clearInterval(bannerTimer);
     bannerTimer = setInterval(bannerSwitcher, 5000)
   });
-  
 </script>
-
 </body>
 
 </html>
