--- a/MS3/report.html
+++ b/MS3/report.html
@@ -146,11 +146,12 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
 
-              <li><a href="index.html" class="active">Home</a></li>
+              <!-- <li><a href="index.html" class="active">Home</a></li> -->
 
-              <li><a href="index.html" id="ignoreCSS">
-                  <i class="fa fa-envelope" id=profile></i></a></li>
-              <li>
+              <li><a onclick="history.back()" style="padding: 0%;">
+                <i class="fa fa-arrow-circle-left" id=profile style="color: aliceblue;"></i></a>
+                </li>
+              <!-- <li>
                 <a href="index.html" id="ignoreCSS">
                   <i class="fa fa-user" id=profile></i></a>
               </li>
@@ -159,7 +160,7 @@
                   <a href="index.html" style="background-color: #eae6e6; color: #000000; 
                   text-align: center; padding: 10px 20px;">Log Out &#8680</a>
                 </div>
-              </li>
+              </li> -->
             </ul>
             <a class='menu-trigger'>
               <span>Menu</span>
